{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 546,
  "lineage": "36dd394a-6fca-4b51-043c-51eb8444fd8d",
  "resources": [
    {
      "module": "module.sqrl-aws-managed-flink-example.module.database.module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:security-group/sg-0152e24d67220e3ff",
            "description": "PostgreSQL security group",
            "egress": [],
            "id": "sg-0152e24d67220e3ff",
            "ingress": [],
            "name": "sqrl-datasqrl-2024080915365020330000000e",
            "name_prefix": "sqrl-datasqrl-",
            "owner_id": "286928876767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-datasqrl",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-datasqrl",
              "Project": "datasqrl"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.database.module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2116484910",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0152e24d67220e3ff",
            "security_group_rule_id": "sgr-09c5558acc96f51d7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.database.module.db_security_group.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.database.module.db_security_group.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.database.module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "PostgreSQL access from Anywhere",
            "from_port": 5432,
            "id": "sgrule-455127511",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0152e24d67220e3ff",
            "security_group_rule_id": "sgr-096bf0543c3e2de09",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.database.module.db_security_group.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.database.module.db_security_group.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_backend",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:286928876767:loadbalancer/app/sqrl-public-backend/3d0bf24f04c1af41",
            "arn_suffix": "app/sqrl-public-backend/3d0bf24f04c1af41",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sqrl-public-backend-5105621.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:286928876767:loadbalancer/app/sqrl-public-backend/3d0bf24f04c1af41",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sqrl-public-backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08555186eede93a7b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b6a28f7e4bdd08df"
              },
              {
                "subnet_id": "subnet-0c1a1f2fbaab5c3ca"
              },
              {
                "subnet_id": "subnet-0ec4a64cd6b025b08"
              }
            ],
            "subnets": [
              "subnet-0b6a28f7e4bdd08df",
              "subnet-0c1a1f2fbaab5c3ca",
              "subnet-0ec4a64cd6b025b08"
            ],
            "vpc_id": "vpc-0598d71fbff454725",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_graphql",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:286928876767:listener/app/sqrl-public-backend/3d0bf24f04c1af41/a053ce8fdb6f0086",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:286928876767:targetgroup/sqrl-graphql/a051126fc1bd69e2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:286928876767:listener/app/sqrl-public-backend/3d0bf24f04c1af41/a053ce8fdb6f0086",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:286928876767:loadbalancer/app/sqrl-public-backend/3d0bf24f04c1af41",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.aws_lb.public_backend",
            "module.sqrl-aws-managed-flink-example.module.server.aws_lb_target_group.backend_graphql",
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_graphql",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:286928876767:targetgroup/sqrl-graphql/a051126fc1bd69e2",
            "arn_suffix": "targetgroup/sqrl-graphql/a051126fc1bd69e2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:286928876767:targetgroup/sqrl-graphql/a051126fc1bd69e2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sqrl-graphql",
            "port": 8888,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatchlogs",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:vpc-endpoint/vpce-093adf845e9075c26",
            "dns_entry": [
              {
                "dns_name": "vpce-093adf845e9075c26-zj2savt5.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-093adf845e9075c26-zj2savt5-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-093adf845e9075c26-zj2savt5-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-093adf845e9075c26-zj2savt5-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0564594ON6WYCBA9VQ0"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z009673818Z0332OUZ16X"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-093adf845e9075c26",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0913fb09d7e832bef",
              "eni-0d07277a616713b7c",
              "eni-0f0b6b3497d07db7c"
            ],
            "owner_id": "286928876767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0beebaee8fd612d37"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0b6a28f7e4bdd08df",
              "subnet-0c1a1f2fbaab5c3ca",
              "subnet-0ec4a64cd6b025b08"
            ],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "cloudwatchlogs-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "cloudwatchlogs-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dkr",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:vpc-endpoint/vpce-02ce705969c7a6ba6",
            "dns_entry": [
              {
                "dns_name": "vpce-02ce705969c7a6ba6-kta7ywp4.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02ce705969c7a6ba6-kta7ywp4-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02ce705969c7a6ba6-kta7ywp4-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02ce705969c7a6ba6-kta7ywp4-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05635821IG8IZPU5BUOL"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05635821IG8IZPU5BUOL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02ce705969c7a6ba6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0319b3405852efbb2",
              "eni-04bc29afa5fbfd7b1",
              "eni-0a752989a1cb91a50"
            ],
            "owner_id": "286928876767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0beebaee8fd612d37"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0b6a28f7e4bdd08df",
              "subnet-0c1a1f2fbaab5c3ca",
              "subnet-0ec4a64cd6b025b08"
            ],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "dkr-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "dkr-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:vpc-endpoint/vpce-0e78a6debc45abd0d",
            "dns_entry": [
              {
                "dns_name": "vpce-0e78a6debc45abd0d-p00ap5bz.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e78a6debc45abd0d-p00ap5bz-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e78a6debc45abd0d-p00ap5bz-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e78a6debc45abd0d-p00ap5bz-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03253273O6ZGWRTLLH7Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e78a6debc45abd0d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-006e04c21a68f9504",
              "eni-037f17782d9e5c47f",
              "eni-0b1b9f2ed200ad324"
            ],
            "owner_id": "286928876767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0beebaee8fd612d37"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0b6a28f7e4bdd08df",
              "subnet-0c1a1f2fbaab5c3ca",
              "subnet-0ec4a64cd6b025b08"
            ],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "ecr-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "ecr-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:vpc-endpoint/vpce-00c50b8064bd2df00",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-00c50b8064bd2df00",
            "owner_id": "286928876767",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ec7f8eaa414445c9"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "s3-gateway-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "s3-gateway-us-east-1-endpoint",
              "Project": "datasqrl"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.data.aws_route_tables.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:security-group/sg-08555186eede93a7b",
            "description": "Expose ssh and graphql, possible flink",
            "egress": [],
            "id": "sg-08555186eede93a7b",
            "ingress": [],
            "name": "sqrl-alb-sg-2024080915365019030000000d",
            "name_prefix": "sqrl-alb-sg-",
            "owner_id": "286928876767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-alb-sg",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-alb-sg",
              "Project": "datasqrl"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2569037860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08555186eede93a7b",
            "security_group_rule_id": "sgr-060993414097f36b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "graphql port",
            "from_port": 80,
            "id": "sgrule-3843844674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08555186eede93a7b",
            "security_group_rule_id": "sgr-03b96cf380c4550bc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.sg_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:security-group/sg-0715f592c933b06a7",
            "description": "Server security group",
            "egress": [],
            "id": "sg-0715f592c933b06a7",
            "ingress": [],
            "name": "sqrl-server-sg-2024080915365012480000000c",
            "name_prefix": "sqrl-server-sg-",
            "owner_id": "286928876767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-server-sg",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-server-sg",
              "Project": "datasqrl"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.sg_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-1633382499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0715f592c933b06a7",
            "security_group_rule_id": "sgr-07678bf563c69deb9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.sg_server.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.sg_server.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.sg_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from ALB",
            "from_port": 8888,
            "id": "sgrule-2607065879",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0715f592c933b06a7",
            "security_group_rule_id": "sgr-04544f93001100384",
            "self": false,
            "source_security_group_id": "sg-08555186eede93a7b",
            "timeouts": null,
            "to_port": 8888,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.alb_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.server.module.sg_server.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.sg_server.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:security-group/sg-0beebaee8fd612d37",
            "description": "Allow all traffic",
            "egress": [],
            "id": "sg-0beebaee8fd612d37",
            "ingress": [],
            "name": "sqrl-vpc-endpoint-sg-2024080915365006830000000b",
            "name_prefix": "sqrl-vpc-endpoint-sg-",
            "owner_id": "286928876767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-vpc-endpoint-sg",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "sqrl-vpc-endpoint-sg",
              "Project": "datasqrl"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-765677146",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0beebaee8fd612d37",
            "security_group_rule_id": "sgr-0f664a192eccfc233",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all traffic",
            "from_port": 0,
            "id": "sgrule-160512240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0beebaee8fd612d37",
            "security_group_rule_id": "sgr-0abf6be0cd5544d30",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this",
            "module.sqrl-aws-managed-flink-example.module.server.module.vpc_endpoint_sg.aws_security_group.this_name_prefix",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:network-acl/acl-013ec16b7a43200e2",
            "default_network_acl_id": "acl-013ec16b7a43200e2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-013ec16b7a43200e2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "286928876767",
            "subnet_ids": [
              "subnet-005b4b65f258f3f05",
              "subnet-05ed33e42344395b6",
              "subnet-06585936c86cf17c9",
              "subnet-0b6a28f7e4bdd08df",
              "subnet-0c1a1f2fbaab5c3ca",
              "subnet-0ec4a64cd6b025b08"
            ],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-default",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-default",
              "Project": "datasqrl"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:route-table/rtb-0adcc026d7516b966",
            "default_route_table_id": "rtb-0adcc026d7516b966",
            "id": "rtb-0adcc026d7516b966",
            "owner_id": "286928876767",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-default",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-default",
              "Project": "datasqrl"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:security-group/sg-0269143b1316143d0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0269143b1316143d0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "286928876767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-default",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-default",
              "Project": "datasqrl"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:internet-gateway/igw-0e83cae2a9a74df00",
            "id": "igw-0e83cae2a9a74df00",
            "owner_id": "286928876767",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Project": "datasqrl"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e83cae2a9a74df00",
            "id": "r-rtb-0ec7f8eaa414445c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ec7f8eaa414445c9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_internet_gateway.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_route_table.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:route-table/rtb-05b2e716f5313baca",
            "id": "rtb-05b2e716f5313baca",
            "owner_id": "286928876767",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1a",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1a",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:route-table/rtb-0b1f7642f87617bdf",
            "id": "rtb-0b1f7642f87617bdf",
            "owner_id": "286928876767",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1b",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1b",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:route-table/rtb-00a008b54fdded77a",
            "id": "rtb-00a008b54fdded77a",
            "owner_id": "286928876767",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1c",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1c",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:route-table/rtb-0ec7f8eaa414445c9",
            "id": "rtb-0ec7f8eaa414445c9",
            "owner_id": "286928876767",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe96fc3ac69efd47",
            "route_table_id": "rtb-05b2e716f5313baca",
            "subnet_id": "subnet-005b4b65f258f3f05"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_route_table.private",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.private",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f39f580431d24902",
            "route_table_id": "rtb-0b1f7642f87617bdf",
            "subnet_id": "subnet-06585936c86cf17c9"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_route_table.private",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.private",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d2ad8dd86f2e084",
            "route_table_id": "rtb-00a008b54fdded77a",
            "subnet_id": "subnet-05ed33e42344395b6"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_route_table.private",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.private",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04857cf929f0f62e5",
            "route_table_id": "rtb-0ec7f8eaa414445c9",
            "subnet_id": "subnet-0b6a28f7e4bdd08df"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_route_table.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091c8c6b5ad13ad63",
            "route_table_id": "rtb-0ec7f8eaa414445c9",
            "subnet_id": "subnet-0c1a1f2fbaab5c3ca"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_route_table.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af856af2dfc84244",
            "route_table_id": "rtb-0ec7f8eaa414445c9",
            "subnet_id": "subnet-0ec4a64cd6b025b08"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_route_table.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_subnet.public",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:subnet/subnet-005b4b65f258f3f05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005b4b65f258f3f05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286928876767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1a",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1a",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:subnet/subnet-06585936c86cf17c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06585936c86cf17c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286928876767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1b",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1b",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:subnet/subnet-05ed33e42344395b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ed33e42344395b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286928876767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1c",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-private-us-east-1c",
              "Project": "datasqrl",
              "Tier": "private"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:subnet/subnet-0b6a28f7e4bdd08df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6a28f7e4bdd08df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286928876767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public-us-east-1a",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public-us-east-1a",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:subnet/subnet-0c1a1f2fbaab5c3ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1a1f2fbaab5c3ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286928876767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public-us-east-1b",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public-us-east-1b",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:subnet/subnet-0ec4a64cd6b025b08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec4a64cd6b025b08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286928876767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public-us-east-1c",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Name": "-public-us-east-1c",
              "Project": "datasqrl",
              "Tier": "public"
            },
            "vpc_id": "vpc-0598d71fbff454725"
          },
          "dependencies": [
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc.this",
            "module.sqrl-aws-managed-flink-example.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sqrl-aws-managed-flink-example.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.sqrl-aws-managed-flink-example.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286928876767:vpc/vpc-0598d71fbff454725",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013ec16b7a43200e2",
            "default_route_table_id": "rtb-0adcc026d7516b966",
            "default_security_group_id": "sg-0269143b1316143d0",
            "dhcp_options_id": "dopt-04e8772528a48a583",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0598d71fbff454725",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adcc026d7516b966",
            "owner_id": "286928876767",
            "tags": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Project": "datasqrl"
            },
            "tags_all": {
              "Environment": "prd",
              "IacDeployment": "tf",
              "Project": "datasqrl"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}